--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
+    "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
+    "grommet": "^2.17.0",
     "next": "10.0.9",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "react-slideshow-image": "^3.4.3",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "^2.0.0",
+    "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1"
   }
 }
