--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "css-loader": "^5.2.0",
     "file-loader": "^6.2.0",
     "grommet": "^2.17.0",
